--- a/countries-api/src/index.css
+++ b/countries-api/src/index.css
@@ -4,8 +4,8 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: black;
+  background-color: whitesmoke;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -14,36 +14,41 @@
   -webkit-text-size-adjust: 100%;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
 
 body {
-  margin: 0;
+  margin: 10px;
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+}
+
+#top-bar {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  color: black;
+  width: 700px;
+
+}
+
+#search-options {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
 
 h1 {
-  font-size: 3.2em;
+  font-size: 2.5em;
   line-height: 1.1;
 }
 
 button {
+  height: 30px;
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: whitesmoke;
   cursor: pointer;
   transition: border-color 0.25s;
 }
@@ -53,4 +58,14 @@ button:hover {
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
+}
+
+.align-right {
+  margin-right: 0;
+  margin-left: auto;
+}
+.center-content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
