--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -40,7 +40,7 @@ body {
   justify-items: center;
 }
 
-.country-component {
+.country-card {
   background-color: white;
   width: 300px;
   margin: 10px;
