--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -15,6 +15,12 @@
   -webkit-text-size-adjust: 100%;
 }
 
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 
 body {
   margin: 10px;
@@ -72,6 +78,19 @@ button {
   font-size: 14px;
   background-color: hsl(0, 0%, 98%);
   cursor: pointer;
+}
+
+.border-country-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+
+.border-country-list-item {
+  list-style-type: none;
+  border-radius: 5px;
+  border: 2px solid gray;
+  padding: 3px 15px;
 }
 
 .bold {
