--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -26,12 +26,16 @@ body {
   margin: 10px;
 }
 
-#top-bar {
+.header {
   display: flex;
   flex-direction: row;
   align-items: center;
   color: black;
   width: 100%;
+}
+
+.header-title:hover {
+  cursor: pointer;
 }
 
 #search-options {
