--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -78,7 +78,9 @@ body {
 
 .country-list {
   display: grid;
-  justify-items: center;
+  grid-template-columns: repeat(auto-fill, 275px);
+  grid-gap: 2em;
+  justify-content: center;
   padding: 20px;
 }
 
@@ -86,11 +88,15 @@ body {
   background-color: white;
   margin: 15px 0;
   border-radius: 10px;
+  width: 275px;
+  height: 400px;
   box-shadow: 0 5px 15px rgba(233, 232, 232, 0.5);
-}
+} 
 
 .flag-img {
   width: 100%;
+  height: 40%;
+  object-fit: cover;
 }
 
 .country-card>.flag-img {
@@ -117,7 +123,7 @@ body {
 }
 
 .country-card-title {
-  margin: 30px 0 20px;
+  margin: 20px 20px 0px;
 }
 
 p {
@@ -163,13 +169,3 @@ button {
   font-weight: 600;
 }
 
-@media only screen and (width >= 600px) {
-  .country-list {
-    grid-template-columns: repeat(2, 1fr)
-  }
-}
-@media only screen and (width >= 992px) {
-  .country-list {
-    grid-template-columns: repeat(4, 1fr)
-  }
-}
